--- a/src/layout/App.css
+++ b/src/layout/App.css
@@ -58,18 +58,16 @@ html {
   
   body .wrapper {
     background-color: var(--primary-color);
-    width: 100%;
     height: var(--nav-height);
-  
+    width: 100vw;
     margin-right: 0;
     margin-left: 0;
     align-items: center;
     display: flex;
-    justify-content: space-between;
-  
+      
     padding-block: 1.6rem;
-    padding-inline: 2.4remrem;
-  
+    padding-inline: 2.4rem;
+    
     position: fixed;
     top: 0;
     left: 0;
@@ -84,94 +82,34 @@ html {
   }
   
   /* ==================NAVIGATION MENU=====================*/
-  body .menu {
-    justify-content: center;
-    align-items: center;
-    display: flex;
-    flex-direction: column;
+
+  .menu {
+    background-color: var(--primary-color);
     position: absolute;
-    transform: translateY(100%);
-  }
-  
-  body div.menu,
-  body button.closeButton {
-    visibility: hidden;
-  }
-  
-  body.menu-expanded div.menu {
-    position: fixed;
-    top: 0;
-    left: 0;
-    transform: translateY(0%);
-    transition: transform 300ms;
-  
+    top: 7.2rem;
     width: 100vw;
     height: 100vh;
-  
-    padding-top: var(--nav-height);
+    position: absolute;
+    transform: translateY(0%);
+    transition: transform 800ms;
   }
   
-  body.menu-expanded  nav button.closeButton {
-    background: none;
-    display: flex;
-    width: 3rem;
-    height: 3rem;
-    margin-left: 33.5rem;
-    padding-inline: 0rem;
-    padding-block: 0rem;
-    
   
+  .menuExpanded {
+    background:none;
+    width: 100vw;
+    height: 10rem;
   }
+
   
   body nav {
     z-index: +1;
   }
   
-  body.menu-expanded div.menu,
-  body.menu-expanded button.closeButton {
-    visibility: visible;
-    position: fixed;
-    background-color: var(--primary-color);
-  }
-  
-  body.menu-expanded {
-    overflow: hidden;
-    width: 100%;
-  }
-  
-  body.menu-expanded > :not(nav) {
-    display: none;
-  }
-  
-  body.menu-expanded nav {
-    position: relative;
-  
-  }
-  
-  body.menu-expanded div.menu {
-    position: fixed;
-    left: 0;
-    top: 0;
-    width: 100vw;
-    height: 100vh;
-    background-color: var(--primary-color);
-    margin: 0;
-  }
   nav button {
     border: none;
     background-color: none;
     cursor: pointer;
-  }
-  body.menu-expanded .buttonMenu {
-    background-color: var(--brand-beige);
-    visibility: visible;
-    transition: 300ms;
-  }
-  
-  body.menu-expanded .buttonMenu:hover {
-    background-color: var(--primary-color);
-    color: var(--brand-beige);
-    border-color: var(--brand-dark);
   }
   
   body .buttonMenu {
@@ -183,8 +121,7 @@ html {
     height: 5.5rem;
   
     border-radius: 4rem;
-    margin-top: 5rem;
-  
+    margin:auto; 
     font-family: "DM Sans";
     font-style: normal;
     font-weight: 700;
@@ -196,18 +133,23 @@ html {
     color: var(--primary-color);
   }
   
-  body.menu-expanded nav button.openButton {
-    background: none;
-    visibility: hidden;
-    
-  }
+
+
   body nav button.openButton {
     background: none;
-    margin-left: calc(37.5rem - 17rem);
+    margin-top: 3rem;
+    margin-left: calc(37.5rem - 10rem);
+    position: absolute;
   
     
   }
+  body nav button.closeButton {
+    background: none;
+    
   
+    
+  }
+
   body .socialLinks {
     justify-content: center;
     display: flex;
@@ -256,12 +198,12 @@ html {
     content: "";
     display: block;
   
-    position: absolute;
     top: 0;
     left: 0;
     z-index: -1;
+    position: absolute;
     height: calc(95rem + var(--nav-height));
-    width: 100%;
+    width: 100vw;
     background-image: url("../assets/paraty1.jpg");
    background-color: var(--brand-light);
   }
@@ -274,7 +216,7 @@ html {
     display: block;
     background: var(--brand-light);
     z-index:-2;
-    position:absolute;
+    position: absolute;
     width: 100vw;
     
   }
@@ -359,6 +301,7 @@ html {
   .containerLogotipo {
     display: flex;
     flex-direction: row;
+    margin: auto;
   }
 
   .logoContainerLogotipo {
@@ -483,9 +426,7 @@ html {
     border-radius: 2rem;
     width: 50rem;
     height: 37rem;
-
     margin-left: 20rem;
-
     position: relative;
   }
 
@@ -515,7 +456,12 @@ html {
     margin: 0px;
     object-position: 1 2rem; 
   }
-  
+  .containers {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding-bottom: 4rem;
+  }
   .containerInfo {
     padding-block: 1rem;
     margin-inline: auto;
@@ -571,89 +517,8 @@ html {
   }
 
   .services {
+    padding-top: 5rem;
   }
-  @media screen and (min-width:799px) {
- 
-
-    .services {
-      background-color: var(--brand-light);
-      padding-top: 10rem;
-      padding-bottom:5rem;
-      padding-left: 10rem;
-      display: flex;
-      flex-direction: row;
-    }
-    .titleServices {
-     color: hsl(210, 11%, 15%);
-  
-    }
-
-  }
-
-  .containersInfo {
-  display: flex;
-  flex-direction: row;
-  }
-
-@media screen and (max-width:800px) {
-  header div.services {
-    background: none;
-    padding-top: 0%;
-
-    padding-block: 1rem;
-    margin-left: auto;
-  
-  }
-
-  .box {
-    background: transparent;
-    perspective: 600px;
-    width: 20.7rem;
-    height: 20.7rem;
-    margin-top: 5rem;
-
-  }
-  .box__content {
-    width: 20.7rem;
-    height: 20.7rem;
-    margin-left:  15rem; 
-
-
-  }
-  header {
-    width: 100%;
-  }
-  .containerInfo {
-    padding-block: 1rem;
-    margin-inline: auto;
-    margin-top: 1rem;
-    margin-bottom: 3rem;
-
-  
-    border: 1px solid var(--brand-light);
-    border-radius: 0.6rem;
-  
-    display: flex;
-    flex-direction:column;
-  
-    height: 470px;
-    min-width:320px;
-    max-width:800px;
-  
-    background-color: var(--brand-beige);
-  }
-    header div div .CardContainer {
-      width: 20.7rem;
-      height: 20.7rem;
-      background-color: none;
-    }
-
-    .containersInfo {
-      display: flex;
-      flex-direction: column;
-    }
-  }
-
   .containerInfoRight {
    
   }
@@ -727,6 +592,7 @@ html {
     display: flex;
     flex-direction: row;
     margin: auto;
+    padding-top: 15rem;
   }
   header article.SobreNosArtigo {
     font-family: "DM Sans";
@@ -800,7 +666,7 @@ html {
     margin-top: 3rem;
     margin-bottom: 5rem;
     padding-left: 3rem;
-    padding-top: 5rem;
+    padding-top: 1rem;
     width: 60rem;
     border-radius: 1.3rem;
   }
@@ -828,7 +694,7 @@ html {
     height: 10rem;
     position: absolute;
     right: 20rem;
-    bottom: 108rem;
+    bottom: 118rem;
     transform: rotate(20deg);
   }
 
@@ -922,7 +788,7 @@ html {
     margin-top: 1.2rem;
 */
   }
-  
+
   header footer {
     /*width: 375px;TELA MOBILE*/
     
@@ -957,11 +823,11 @@ html {
   
   footer .socialLinks {
     justify-content: flex-start;
-    //display: flex;
-    //margin: auto;
-    //padding: 0;
-    //align-items: center;
-    //width:0rem;
+  display: flex;
+    margin: auto;
+    padding: 0;
+    align-items: center;
+  /width:0rem;
   
   }
 
@@ -1089,3 +955,255 @@ html {
     border-radius: 3rem;
   }
 
+/* =============MOBILE=============*/
+
+  @media screen and (min-width:799px) {
+
+    .services {
+      background-color: white;
+      padding-top: 10rem;
+      padding-bottom:5rem;
+      padding-left: 10rem;
+      display: flex;
+      flex-direction: row;
+    }
+    .titleServices {
+     color: hsl(210, 11%, 15%);
+  
+    }
+
+  }
+
+
+@media screen and (max-width:800px) {
+
+  header {
+    width: 100vw;
+  }
+
+  body .wrapper {
+    background-color: var(--primary-color);
+    height: var(--nav-height);
+    width: 40rem;
+    margin-right: 0;
+    margin-left: 0;
+    align-items: center;
+    display: flex;
+    padding: 0px;
+   position: fixed;
+    z-index: +2;
+  
+  }
+  body nav button.openButton {
+    width: 51rem;
+    height: 51rem;
+    background-color: red;
+    position: absolute;
+  
+    
+  }
+
+  .containerLogotipo {
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+    margin-bottom: 3rem;
+
+    width: 100vw;
+  }
+
+  .conteinerLogotipoText {
+    background-image: url("../assets/backgroundCard_resized.png");
+    border-radius: 2rem;
+    width: 37rem;
+    height: 37rem;
+    margin: auto;
+    position: relative;
+  }
+
+  .coconut {
+    width: 8rem;
+    height: 8rem;
+    position: absolute;
+    right: 10rem;
+    top: 55rem;
+    transform: rotate(-33deg);
+    visibility: hidden;
+  }
+
+  .containerInfo {
+    padding-block: 1rem;
+    margin-inline: auto;
+    margin-bottom: 2rem;
+  
+    border: 1px solid var(--brand-light);
+    border-radius: 0.6rem;
+  
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  
+    height: 470px;
+    width: 34.3rem;
+   
+  
+    background-color: var(--brand-beige);
+  }
+
+  .imageReview {
+    width: 10rem;
+    height: 10rem;
+    position: relative;
+    bottom: 3.5rem;
+    display: block;
+    margin: 0px;
+    object-position: 1 2rem;  
+    visibility: hidden;
+  }
+
+  .imageTraveler {
+    width: 14.5rem;
+    height: 14.5rem;
+    position: relative;
+    bottom: 10.5rem;
+    display: block;
+    margin: 0px;
+    object-position: 1 2rem; 
+    visibility: hidden;
+  }
+
+  .footer {
+    width: 100vw;
+  }
+
+  .partnersGroup {
+    flex-direction: column;
+    margin-left: 1rem;
+    padding-left: 2rem;
+  }
+
+  .partnersText {
+    margin-bottom: 15.4rem;
+  }
+  .containerAbout {
+    flex-direction: column;
+    margin-top: 4rem;
+    margin-left: auto;
+    margin-right: auto;
+    width: 35rem;
+  }
+
+  .sobreNos {
+    background: white;
+    border-radius: 1.3rem;
+    padding-bottom: 4.4rem;
+    margin:auto;
+    width: 35rem;
+
+  }
+  .contact {
+    background-color: white;
+    margin:auto;
+    margin-top: 3rem;
+    margin-bottom: 3rem;
+    padding-top: 5rem;
+    width: 35rem;
+    border-radius: 1.3rem;
+  }
+
+  .crab {
+    width: 5rem;
+    height: 5rem;
+    position: absolute;
+    right: 6rem;
+    bottom: 155rem;
+    transform: rotate(20deg);
+  }
+
+  .iconDestine {
+    position: absolute;
+    width: 13rem;
+    height: 13rem;
+    left: 22rem;
+    top:285rem;
+  }
+
+  /*body {}
+  .a {
+    display: flex;
+    flex-direction: column;
+    width: 20rem;
+  }
+
+  .containerLogotipo {
+    display: flex;
+    flex-direction: column;
+    width: 100vw;
+
+    background-color: red;
+  }
+
+  header div.services {
+    background-color: red;
+    padding-top: 0%;
+    
+    padding-block: 1rem;
+    margin: auto;
+  
+  }
+
+  .box {
+    background: transparent;
+    perspective: 600px;
+    width: 20.7rem;
+    height: 20.7rem;
+    margin-top: 5rem;
+
+  }
+  .box__content {
+    width: 20.7rem;
+    height: 20.7rem;
+    margin-left:  15rem; 
+
+
+  }
+  #homePage {
+    width: 100vw;
+  }
+  .containers {
+    padding-block: 1rem;
+    margin-inline: auto;
+    margin-bottom: 15rem;
+    align-items: center;
+    border: 1px solid var(--brand-light);
+    border-radius: 0.6rem;
+  
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  
+    height: 470px;
+    width: 34.3rem;
+   
+  
+    background-color: blue;
+  
+  }
+    header div div .CardContainer {
+      width: 20.7rem;
+      height: 20.7rem;
+      background-color: none;
+    }
+
+    .containersInfo {
+      display: flex;
+      flex-direction: column;
+    }
+
+    .containerAbout {
+      display: flex;
+      flex-direction: column;
+      margin: auto;
+      width: 30rem;
+    }*/
+  }
