--- a/src/layout/App.css
+++ b/src/layout/App.css
@@ -394,6 +394,17 @@ header header div {
 	display: inline-block;
 }
 
+#buttonReturn {
+  position: flex;
+  bottom: 1rem;
+  padding: 2rem;
+  background-color: transparent;
+  border: none;
+}
+#buttonReturn svg {
+  transform: rotate(270deg);
+
+}
 
 .logoContainerLogotipo {
   width: 30rem;
@@ -711,11 +722,17 @@ header header div {
   color: var(--primary-color);
 }
 
+.blog-about {
+  padding-top: 40rem;
+  margin-right: 30rem;
+  background-color:red;
+}
+
 .containerAbout {
   display: flex;
   flex-direction: row;
   margin: auto;
-  padding-top: 15rem;
+  padding-top: 5rem;
 }
 
 header article.SobreNosArtigo {
@@ -817,11 +834,11 @@ header div div .CardContainer {
 }
 
 .crab {
-  width: 6rem;
-  height: 6rem;
+  width: 8rem;
+  height: 8rem;
   position: relative;
   right: 40rem;
-  bottom: 55rem;
+  bottom: 2rem;
   transform: rotate(30deg);
 }
 
@@ -1314,7 +1331,7 @@ width: auto;
 
   .containerAbout {
     flex-direction: column;
-    margin-top: 4rem;
+    margin-top: 1rem;
     margin-left: auto;
     margin-right: auto;
     width: 35rem;
@@ -1324,6 +1341,7 @@ width: auto;
     background: white;
     border-radius: 1.3rem;
     padding-bottom: 4.4rem;
+    margin-top: 3rem;
     margin: auto;
     width: 35rem;
 
@@ -1346,6 +1364,21 @@ width: auto;
     right: 6rem;
     bottom: 145rem;
     transform: rotate(20deg);
+  }
+
+  #buttonReturn {
+    position: flex;
+    bottom: 1rem;
+    padding: 2rem;
+    background-color: transparent;
+    border: none;
+
+  
+  }
+
+  #buttonReturn svg {
+    transform: rotate(270deg);
+
   }
 
   .services {
