--- a/src/layout/Articles.css
+++ b/src/layout/Articles.css
@@ -313,15 +313,20 @@ display: flex;
 }
 
 .explorerFloatMenu {
-  border: 1px solid black;
-  border-radius: 1rem;
+  border: 0.5px solid black;
+  border-radius: 0.5rem;
   width: auto;
   padding: 1rem;
-  margin-top: 3rem;
-  height: 4rem;
+  margin-top: 2rem;
+  height: 3rem;
   align-items: center;
   justify-content: center;
-  margin-right: .2rem;
+  margin-right: .5rem;
+}
+
+.explorerFloatMenu h3 {
+  font-size: 1rem;
+
 }
 
 .drawPhotos {
@@ -452,6 +457,21 @@ display: flex;
   --padding-block: 5px;
 }
 
+.buttonTravel{
+  width: 20rem;
+  height: 3rem;
+  margin-left: 8rem;
+  color: white;
+  font-weight: 700;
+  border-radius: 0.5rem;
+  background-color: var(--primary-color);
+  transition: 100ms;
+}
+
+.buttonTravel:hover {
+  background-color: var(--dark-orange);
+}
+
 .blog-card .card-content { padding: 30px; }
 
 .blog-card .card-meta-wrapper {
@@ -536,3 +556,5 @@ display: flex;
 
    .blog-card .card-title { --fs-3: 2.2rem; }
   .blog-list { grid-template-columns: repeat(3, 1fr); }
+
+
